--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3652,7 +3652,7 @@ input, select, textarea {
 		}
 
 		#header a {
-			color: #FF7F50;
+			color: white;
 			border-bottom-color: rgba(255, 255, 255, 0.5);
 		}
 
@@ -3689,7 +3689,7 @@ input, select, textarea {
 			transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
 			pointer-events: auto;
 			border-style: solid;
-			border-color: #FF7F50;
+			border-color: white;
 			border-width: 5px !important;
 			font-family: "Source Sans Pro", Helvetica, sans-serif;
 			font-size: 2.25rem;
