updated experience descriptions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2654,10 +2654,13 @@ input, select, textarea {
 
 		.image.left, .image.right {
 			max-width: 25%;
+
 		}
 
 			.image.left img, .image.right img {
 				width: 100%;
+				max-height: 12rem;
+				object-fit: scale-down;
 			}
 
 		.image.left {
