--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2661,6 +2661,7 @@ input, select, textarea {
 				width: 100%;
 				max-height: 12.5rem;
 				object-fit: scale-down;
+				/*edits go here*/
 			}
 
 		.image.left {
