--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3403,7 +3403,7 @@ input, select, textarea {
 
 /* Hero Image from ww3*/
 	.hero-image {
-	  background-image: url("../../images/cover_10.png");
+	  background-image: url("../../images/ajc/cover_10.png");
 	  background-color: #cccccc;
 	  background-position: center;
 	  background-repeat: no-repeat;
